<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context="uz.infinity.mytask.presentation.ui.screens.LoginScreen">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextView.Title"
        android:layout_marginBottom="32dp"
        android:text="@string/sing_in"
        app:layout_constraintBottom_toTopOf="@id/editEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editEmail"
        style="@style/EditText"
        android:hint="@string/email"
        android:maxLength="32"
        android:imeOptions="actionNext"
        android:paddingHorizontal="16dp"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editPassword"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:maxLength="24"
        android:imeOptions="actionDone"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/editEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignIn"
        style="@style/Button.Action"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/sing_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignUp"
        style="@style/Button.Action"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/buttonForgotPassword"
        style="@style/TextView.Action"
        android:layout_marginVertical="8dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/forgot_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>

