<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/edit"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editEmail"
        style="@style/EditText"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:paddingHorizontal="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editPassword"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:maxLength="24"
        android:paddingHorizontal="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEdit"
        style="@style/Button.Action"
        android:layout_marginTop="16dp"
        android:text="@string/edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>